runoff/root_docs_txt/part_0001/build_log_final.txt
[  1%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/main_win32.cpp.obj
[  2%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE.cpp.obj
[  4%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Core.cpp.obj
[  5%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Sidebar.cpp.obj
[  7%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_VSCodeUI.cpp.obj
[  8%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_PowerShellPanel.cpp.obj
[  9%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_PowerShell.cpp.obj
[ 11%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Logger.cpp.obj
[ 12%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_FileOps.cpp.obj
[ 14%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Commands.cpp.obj
[ 15%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Debugger.cpp.obj
[ 16%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_AgenticBridge.cpp.obj
[ 18%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_AgentCommands.cpp.obj
[ 19%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Autonomy.cpp.obj
[ 21%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_SyntaxHighlight.cpp.obj
[ 22%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Themes.cpp.obj
[ 23%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Annotations.cpp.obj
[ 25%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Session.cpp.obj
[ 26%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_StreamingUX.cpp.obj
[ 28%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_ReverseEngineering.cpp.obj
[ 29%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_GhostText.cpp.obj
[ 30%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_PlanExecutor.cpp.obj
[ 32%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_FailureDetector.cpp.obj
[ 33%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_FailureIntelligence.cpp.obj
[ 35%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_Settings.cpp.obj
[ 36%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_LocalServer.cpp.obj
[ 38%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_BackendSwitcher.cpp.obj
[ 39%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_LLMRouter.cpp.obj
[ 40%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_LSPClient.cpp.obj
[ 42%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_AsmSemantic.cpp.obj
[ 43%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_MultiResponse.cpp.obj
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp: In member function 'void Win32IDE::cmdMultiResponseGenerate()':
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp:98:26: error: 'getLastUserMessage' was not declared in this scope
   98 |     std::string prompt = getLastUserMessage();
      |                          ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp: In member function 'void Win32IDE::handleMultiResponseResultsEndpoint(SOCKET, const std::string&)':
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp:434:34: error: 'class MultiResponseEngine' has no member named 'getSessionById'; did you mean 'getSession'?
  434 |         : m_multiResponseEngine->getSessionById(sessionId);
      |                                  ^~~~~~~~~~~~~~
      |                                  getSession
mingw32-make[3]: *** [CMakeFiles\RawrXD-Win32IDE.dir\build.make:529: CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_MultiResponse.cpp.obj] Error 1
mingw32-make[2]: *** [CMakeFiles\Makefile2:156: CMakeFiles/RawrXD-Win32IDE.dir/all] Error 2
mingw32-make[1]: *** [CMakeFiles\Makefile2:163: CMakeFiles/RawrXD-Win32IDE.dir/rule] Error 2
mingw32-make: *** [Makefile:149: RawrXD-Win32IDE] Error 2
